test/success/multiline-fn.dsk
let add = (
    a: int,
    b: int
) -> return a + b

assert(add(2, 3) == 5)
