test/error/sema/invalid-number-of-args.dsk
let add = (a: int, b: int) -> int
    return a + b
end

echo(add(1))
